# libwificpp

./: .gitignore  CMakeLists.txt  README.md  b_linux.sh  b_mac.sh  build_all.bat  c_mac.sh  c_win.bat  create_wifi_test_app.sh  readme_android.md  readme_ios.md  readme_linux.md  readme_macos.md  readme_rtos.md  readme_windows.md  run_rust_example.bat  run_tests.bat
.github/: copilot-instructions.md
WiFiTest.app/Contents/: Info.plist
WiFiTest.app/Contents/MacOS/: WiFiTest  run_test_with_output.sh  test_wifi
android/com/wificpp/: WifiHelper.java  WifiNetwork.java
include/: wifi_c_api.h  wifi_impl.hpp  wifi_logger.hpp  wifi_manager.hpp  wifi_platform.hpp  wifi_types.hpp
src/: wifi_android.cpp  wifi_c_api.cpp  wifi_ios.mm  wifi_linux.cpp  wifi_logger.cpp  wifi_macos.cpp  wifi_macos.cpp.bak  wifi_manager.cpp  wifi_rtos.cpp  wifi_scanner.cpp  wifi_windows.cpp
test/: test_wifi.cpp
wifi-rs/: Cargo.toml  build.rs
wifi-rs/src/: lib.rs  main.rs
